<resources>
    <string name="app_name">MoneySplitter</string>

    <string name="splitter_settings">Settings</string>

    <string name="fab_menu_person">Person</string>
    <string name="fab_menu_item">Item</string>

    <string name="bottom_menu_back">Back</string>
    <string name="bottom_menu_next">Next</string>
    <string name="bottom_menu_done">Done</string>

    <string name="wizard_step_of">%1$d of %2$d</string>
    <string name="wizard_clear_data">Would you like to start over and remove all current data?</string>

    <!-- Wizard Users start-->
    <string name="users_name">Name</string>
    <string name="users_add_participants">Add participants:</string>
    <string name="users_add">Add</string>
    <!-- Wizard Users end-->

    <!-- Wizard Families start-->
    <string name="families_add_new">Create groups or families:</string>
    <!-- Wizard Families end-->

    <!-- Wizard Spending start-->
    <string name="spending_add">Add spending:</string>
    <string name="spending_payers">Payers:</string>
    <string name="spending_consumers">Consumers:</string>
    <!-- Wizard Spending end-->

    <!-- Wizard Summary start-->
    <string name="summary_title">Summary:</string>
    <string name="summary_paid">Paid</string>
    <string name="summary_consume">Consume</string>
    <string name="summary_difference">Total</string>
    <string name="summary_share">Share summary</string>
    <!-- Wizard Summary end-->

    <!-- Wizard Debts start-->
    <string name="debts_title">Debts:</string>
    <string name="debts_owe">owe(s)</string>
    <string name="debts_copy">Copy as text</string>
    <string name="debts_copied">Copied to clipboard!</string>
    <string name="debt_copy_format">%1$s owe(s) %2$s %3$s</string>
    <string name="debts_empty">Looks like no debts here\n😉</string>
    <!-- Wizard Debts end-->

    <!-- Navigation Menu start-->
    <string name="navigation_menu_users">Users</string>
    <string name="navigation_menu_items">Items</string>
    <string name="navigation_menu_summary">Summary</string>
    <string name="navigation_menu_settings">Settings</string>
    <!-- Navigation Menu end-->

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>

    <!-- User Edit Screen start-->
    <string name="user_edit_name">Name</string>
    <string name="user_edit_family">Family</string>
    <string name="user_edit_none">None</string>
    <string name="user_edit_menu_item_save">Save</string>
    <string name="user_edit_create">Create</string>
    <string name="user_edit_edit">@string/context_menu_edit</string>

    <string name="user_edit_add_family">Add family</string>
    <!-- User Edit Screen end-->

    <!-- Family Add Screen start-->
    <string name="family_add_hint">@string/user_edit_family</string>
    <string name="family_add_title">Add new family</string>
    <string name="family_edit_title">Edit family</string>
    <string name="family_add_members">Add members:</string>
    <string name="family_name">Family or group name</string>
    <string name="family_edit_save">Save</string>
    <string name="family_no_available_members">No available members.\nProbably all members have been already added to families</string>
    <string name="family_not_set_error">Family name is required</string>
    <string name="family_delete">Delete</string>
    <!-- Family Add Screen end-->

    <!-- Spending Add Screen start-->
    <string name="spending_everyone">Everyone</string>
    <string name="spending_edit_add">Add spending</string>
    <string name="spending_edit_edit">Edit spending</string>
    <string name="spending_edit_paid_by">Paid by:</string>
    <string name="spending_edit_consumed_by">Consumed by:</string>
    <string name="spending_edit_item_name">Name</string>
    <string name="spending_edit_price">Price</string>
    <string name="spending_edit_save">@string/family_edit_save</string>
    <string name="spending_edit_delete">@string/family_delete</string>
    <!-- Spending Add Screen end-->

    <!-- Item List Screen start-->
    <string name="items_title">Items</string>
    <string name="items_item">Item</string>
    <string name="items_price">Price</string>
    <string name="items_buyer">Buyer</string>
    <!-- Item List Screen end-->

    <!-- Item Show Screen start-->
    <string name="item_show_price">Price:</string>
    <string name="item_show_buyer">Creditor:</string>
    <string name="item_show_debtors">Debtors:</string>
    <!-- Item Show Screen end-->

</resources>
