<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="13dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="start"
        android:lineSpacingExtra="0sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/items_title"
        android:textAppearance="@style/MoneySplitter.Text_Bold_28"
        android:textColor="@color/black_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/items_item"
            android:textAppearance="@style/MoneySplitter.Text_ColumnTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/items_price"
            android:textAppearance="@style/MoneySplitter.Text_ColumnTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:minWidth="32dp"
            android:text="@string/items_buyer"
            android:textAppearance="@style/MoneySplitter.Text_ColumnTitle" />
    </LinearLayout>
</LinearLayout>