<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="ItemDialogFragmentBinding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/item_show_price"
                android:textAppearance="@style/MoneySplitter.Text_Normal_16" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="100"
                android:textAppearance="@style/MoneySplitter.Text_Normal_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_show_buyer"
                android:textStyle="bold"
                android:textAppearance="@style/MoneySplitter.Text_Normal_16"/>

            <TextView
                android:id="@+id/tvCreditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="West"
                android:textAppearance="@style/MoneySplitter.Text_Normal_16"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_show_debtors"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="@style/MoneySplitter.Text_Normal_16"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDebtors"
            android:layout_width="match_parent"
            android:layout_height="82dp"/>
    </LinearLayout>
</layout>
