<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="SpendingEditActivityBinding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="46dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilItemName"
                        style="@style/MoneySplitter.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtItemName"
                            style="@style/MoneySplitter.TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/spending_edit_item_name"
                            android:inputType="text"
                            android:imeOptions="actionNext"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilItemPrice"
                        style="@style/MoneySplitter.TextInputLayout_Price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1.5"
                        android:hint="@string/spending_edit_price"
                        app:errorEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtItemPrice"
                            style="@style/MoneySplitter.TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvPaidByUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/spending_edit_paid_by"
                    android:textAppearance="@style/MoneySplitter.Text_Medium_16" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPaidByUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/tvConsumedByUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/spending_edit_consumed_by"
                    android:textAppearance="@style/MoneySplitter.Text_Medium_16" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvConsumedByUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="76dp"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/MoneySplitter.MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spending_edit_save"
            android:layout_alignParentBottom="true"
            android:enabled="false"/>
    </RelativeLayout>
</layout>