<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="FamilyEditFragmentBinding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFamilyName"
                    style="@style/MoneySplitter.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="46dp"
                    android:layout_marginEnd="16dp"
                    android:focusedByDefault="true"
                    app:errorEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtFamilyName"
                        style="@style/MoneySplitter.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/family_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/family_add_members"
                    android:textAppearance="@style/MoneySplitter.Text_Medium_20" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/MoneySplitter.MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family_edit_save"
            android:layout_alignParentBottom="true"
            android:enabled="false"/>
    </RelativeLayout>
</layout>