<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="UsersWizardFragmentBinding" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:paddingBottom="32dp"
                android:text="@string/users_add_participants"
                android:textAppearance="@style/MoneySplitter.Text_Medium_20"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                style="@style/MoneySplitter.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@id/btnAddUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtUserName"
                    style="@style/MoneySplitter.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/users_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_icon_selected"
                android:contentDescription="@string/users_add"
                android:enabled="false"
                android:padding="8dp"
                android:src="@drawable/ic_send"
                app:layout_constraintBottom_toBottomOf="@id/tilUserName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tilUserName" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:overScrollMode="never"
                android:paddingBottom="66dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>